--- a/fun.ipynb
+++ b/fun.ipynb
@@ -2,25 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python\n"
+      "2 is the even number\n"
      ]
     }
    ],
    "source": [
-    "print(\"python\")"
+    "def main():\n",
+    "    even(2)\n",
+    "    odd(55)\n",
+    "\n",
+    "def even(n):\n",
+    "    if n % 2 == 0 :\n",
+    "        print(n,\"is the even number\")\n",
+    "\n",
+    "def odd(n):\n",
+    "    if n % 2 != 0 :\n",
+    "        print(n,\"is the odd number\")\n",
+    "        \n",
+    "main()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
