--- a/fun.ipynb
+++ b/fun.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2 is the even number\n"
+      "2 is the even number\n",
+      "55 is the odd number\n"
      ]
     }
    ],
@@ -31,10 +32,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1060.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "def addinterest(balance,rate):\n",
+    "    newbalance=balance*(1+rate)\n",
+    "    return newbalance\n",
+    "\n",
+    "def main():\n",
+    "    amount=1000\n",
+    "    rate=0.06\n",
+    "    amount= addinterest(amount,rate)\n",
+    "    print(amount)\n",
+    "\n",
+    "main()\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
