--- a/fun.ipynb
+++ b/fun.ipynb
@@ -658,6 +658,60 @@
     "else:\n",
     "\tprint(\"Let's go for walk\",user_input)\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "str1=\"hello\"\n",
+    "print(type(str1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello welcome\n"
+     ]
+    }
+   ],
+   "source": [
+    "name =\"alex\"\n",
+    "age=0\n",
+    "\n",
+    "if name ==\"alex\" or name==\"john\" and age>=2:\n",
+    "    print(\"hello welcome\")\n",
+    "else:\n",
+    "    print(\"good bell\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
