--- a/fun.ipynb
+++ b/fun.ipynb
@@ -709,9 +709,24 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'huli': 2, 'supriya': 1, 'vinaya': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "name =[\"huli\",\"supriya\",\"vinaya\"]\n",
+    "roll_no=[2,1,3]\n",
+    "mapped=zip(name,roll_no)\n",
+    "print(dict(mapped))"
+   ]
   }
  ],
  "metadata": {
