--- a/fun.ipynb
+++ b/fun.ipynb
@@ -727,6 +727,127 @@
     "mapped=zip(name,roll_no)\n",
     "print(dict(mapped))"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "functions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func1(x):\n",
+    "    if x % 2 == 0:\n",
+    "        print(\"even\")\n",
+    "    else:\n",
+    "        print(\"odd\")\n",
+    "func1(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    a=int(input(\"enter the number\"))\n",
+    "    if a % 2 == 0:\n",
+    "        print(\"even\")\n",
+    "    else:\n",
+    "        print(\"odd\")\n",
+    "fun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(a):\n",
+    "    if a%2==0:\n",
+    "        return \"even\"\n",
+    "    else:\n",
+    "        return \"odd\"\n",
+    "ans=fun(323)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area of trangle : 33.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# python program to find area of trangle\n",
+    "b=float(input(\"enter the base\"))\n",
+    "h=float(input(\"enter the height\"))\n",
+    "area=0.5*b*h\n",
+    "print(\"area of trangle :\",area)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.495\n"
+     ]
+    }
+   ],
+   "source": [
+    "def area():\n",
+    "    b=float(input(\"enter the base\"))\n",
+    "    h=float(input(\"enter the height\"))\n",
+    "    area=0.5*b*h\n",
+    "    return area\n",
+    "\n",
+    "ar=area()\n",
+    "print(ar)"
+   ]
   }
  ],
  "metadata": {
