--- a/program/Assprograms.ipynb
+++ b/program/Assprograms.ipynb
@@ -42,25 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the simple interest 3000.0\n",
-      "the time preiod 7\n",
-      "the rste of interest 1.0\n",
-      "simple interest is 210.0\n"
+      "the simple interest 30000.0\n",
+      "the time preiod 8\n",
+      "the rste of interest 5.0\n",
+      "simple interest is 12000.0\n"
      ]
     }
    ],
    "source": [
-    "P=float(input(\"enter the principle amount\"))\n",
-    "T=int(input(\"enter the time period\"))\n",
-    "R=float(input(\"enter the rate\"))\n",
-    "simpleinterest(P,T,R)\n",
+    "\n",
     "\n",
     "def simpleinterest(p,t,r):\n",
     "    print('the simple interest',p)\n",
@@ -69,7 +66,12 @@
     "    \n",
     "    si=(p*t*r)/100\n",
     "\n",
-    "    print('simple interest is',si)\n"
+    "    print('simple interest is',si)\n",
+    "\n",
+    "P=float(input(\"enter the principle amount\"))\n",
+    "T=int(input(\"enter the time period\"))\n",
+    "R=float(input(\"enter the rate\"))\n",
+    "simpleinterest(P,T,R)"
    ]
   },
   {
@@ -82,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compound interest is 472.87500000000045\n"
+      "Compound interest is 14323.663313671888\n"
      ]
     }
    ],
@@ -105,6 +107,13 @@
     "\n",
     "compound_interest(principal,rate,time)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
