--- a/fun.ipynb
+++ b/fun.ipynb
@@ -848,6 +848,272 @@
     "ar=area()\n",
     "print(ar)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ENUMERATE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 'a'), (1, 'b'), (2, 'c')]\n",
+      "0~a\n",
+      "1~b\n",
+      "2~c\n",
+      "b\n",
+      "b\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1=['a','b','c']\n",
+    "obj1= enumerate(l1)\n",
+    "\n",
+    "print(list(obj1))\n",
+    "for i,j in enumerate(l1):\n",
+    "    print(i,j,sep='~')\n",
+    "    \n",
+    "for i in l1:\n",
+    "    print(l1[1])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "list comprehension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[1,2,3,4,5,6,7,8,9,10,11,12,13]\n",
+    "print(list1)\n",
+    "\n",
+    "new_old_list =[i for i in list1 if i<10]\n",
+    "print(new_old_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2, 3], [0, 1, 2, 3], [0, 1, 2, 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list2=[[j for j in range(4)]for i in range(3)]\n",
+    "print(list2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.5, 9.0, 10.5, 12.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "custome_list=[(i/2)*3 for i in range(10) if i>4 and i<9]\n",
+    "print(custome_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7.5, 9.0, 10.5, 12.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1=[]\n",
+    "for i in range(10):\n",
+    "    if i>4 and i<9:\n",
+    "        exp=(i/2)*3\n",
+    "        list1.append(exp)\n",
+    "print(list1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0\n",
+      "0    1\n",
+      "0    2\n",
+      "0    3\n",
+      "0    4\n",
+      "1    0\n",
+      "1    1\n",
+      "1    2\n",
+      "1    3\n",
+      "1    4\n",
+      "2    0\n",
+      "2    1\n",
+      "2    2\n",
+      "2    3\n",
+      "2    4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(3):\n",
+    "    for j in range(5):\n",
+    "        print(i,j,sep='    ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 1, 2, 3, 4], [0, 1, 2, 3, 4], [0, 1, 2, 3, 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list3=[]\n",
+    "for i in range(3):\n",
+    "    list3.append([])\n",
+    "    for j in range(5):\n",
+    "        list3[i].append(j) \n",
+    "    \n",
+    "print(list3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the simple interest 5000.0\n",
+      "the time preiod 5\n",
+      "the rste of interest 25.0\n",
+      "simple interest is 6250.0\n",
+      "the simple interest 3000\n",
+      "the time preiod 12\n",
+      "the rste of interest 2\n",
+      "Compound interest is 804.7253836876366\n"
+     ]
+    }
+   ],
+   "source": [
+    "    def simpleinterest(p,t,r):\n",
+    "        print('the simple interest',p)\n",
+    "        print('the time preiod',t)\n",
+    "        print('the rste of interest',r)\n",
+    "        \n",
+    "        si=(p*t*r)/100\n",
+    "\n",
+    "        print('simple interest is',si)\n",
+    "\n",
+    "    P=float(input(\"enter the principle amount\"))\n",
+    "    T=int(input(\"enter the time period\"))\n",
+    "    R=float(input(\"enter the rate\"))\n",
+    "    simpleinterest(P,T,R)\n",
+    "\n",
+    "    def compound_interest(principal, rate, time): \n",
+    "        print('the simple interest',principal)\n",
+    "        print('the time preiod',time)\n",
+    "        print('the rste of interest',rate)\n",
+    "        Amount = principal * (pow((1 + rate / 100), time)) \n",
+    "        CI = Amount - principal \n",
+    "        print(\"Compound interest is\", CI) \n",
+    "\n",
+    "    principal = int(input(\"Enter the principal amount: \")) \n",
+    "    rate = int(input(\"Enter rate of interest: \")) \n",
+    "    time = int(input(\"Enter time in years: \" ))  \n",
+    "\n",
+    "    compound_interest(principal,rate,time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the principle amount: 100000.0\n",
+      "Enter the no of Months: 120.0\n",
+      "Enter the annual interest rate:  7.0\n",
+      "MONTHLY EMi is 1161.0847921862376\n"
+     ]
+    }
+   ],
+   "source": [
+    "def EMI(p,t,r):\n",
+    "    print('Enter the principle amount:',p)\n",
+    "    print('Enter the no of Months:',t)\n",
+    "    print('Enter the annual interest rate: ',r)\n",
+    "    r=R/(12*100)\n",
+    "    emi=p*r*((1+r)**t)/((1+r)**t-1)\n",
+    "\n",
+    "    print('MONTHLY EMi is',emi)\n",
+    "\n",
+    "P=float(input(\"enter the principle amount\"))\n",
+    "T=float(input(\"enter the time period\"))\n",
+    "R=float(input(\"enter the rate\"))\n",
+    "\n",
+    "EMI(P,T,R)"
+   ]
   }
  ],
  "metadata": {
