--- a/fun.ipynb
+++ b/fun.ipynb
@@ -1114,6 +1114,331 @@
     "\n",
     "EMI(P,T,R)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n",
+      "welcome\n",
+      "to\n",
+      "keonics\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFun(*arvg):\n",
+    "    for arg in arvg:\n",
+    "        print(arg)\n",
+    "        \n",
+    "myFun('hello','welcome','to','keonics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "first == hello\n",
+      "second == welcome\n",
+      "third == to\n",
+      "forth == keonics\n"
+     ]
+    }
+   ],
+   "source": [
+    "def myFun(**arvg):\n",
+    "    for arg,arg2 in arvg.items():\n",
+    "        print(\"%s == %s\" %(arg,arg2))\n",
+    "        \n",
+    "myFun(first='hello',second='welcome',third='to',forth='keonics')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I Love U\n"
+     ]
+    }
+   ],
+   "source": [
+    "def d1():\n",
+    "    s=\"I Love U\"\n",
+    "    \n",
+    "    def d2():\n",
+    "        print(s)\n",
+    "        \n",
+    "    d2()\n",
+    "d1()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i love u\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    print(s)\n",
+    "s=\"i love u\"\n",
+    "f()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i love u\n",
+      "i love u\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f():\n",
+    "    print(s)\n",
+    "f()\n",
+    "s=\"i love u\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "global scope\n",
+      "enclosing scope\n",
+      "local scope\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=\"global scope\"\n",
+    "def outer_fun():\n",
+    "    x=\"enclosing scope\"\n",
+    "    print(x)\n",
+    "    def inner_fun():\n",
+    "        x=\"local scope\"\n",
+    "        print(x)\n",
+    "    inner_fun()\n",
+    "print(x)\n",
+    "outer_fun()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using __doc__\n",
+      "demonstrate tripple single quotes\n",
+      "    docstrings\n",
+      "using help:\n",
+      "Help on function my_function in module __main__:\n",
+      "\n",
+      "my_function()\n",
+      "    demonstrate tripple single quotes\n",
+      "    docstrings\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_function():\n",
+    "    '''demonstrate tripple single quotes\n",
+    "    docstrings'''\n",
+    "    return None\n",
+    "\n",
+    "print(\"using __doc__\")\n",
+    "print(my_function.__doc__)\n",
+    "\n",
+    "print(\"using help:\")\n",
+    "help(my_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print(value, ..., sep=' ', end='\\n', file=sys.stdout, flush=False)\n",
+      "\n",
+      "Prints the values to a stream, or to sys.stdout by default.\n",
+      "Optional keyword arguments:\n",
+      "file:  a file-like object (stream); defaults to the current sys.stdout.\n",
+      "sep:   string inserted between values, default a space.\n",
+      "end:   string appended after the last value, default a newline.\n",
+      "flush: whether to forcibly flush the stream.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(print.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This module provides access to the mathematical functions\n",
+      "defined by the C standard.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(math.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "using function defination with 'def' keyword,cube: 125\n",
+      "using lambda function , cube 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cube(y):\n",
+    "    return y*y*y\n",
+    "\n",
+    "lambda_cube = lambda y: y*y*y\n",
+    "\n",
+    "print(\"using function defination with 'def' keyword,cube:\",cube(5))\n",
+    "print(\"using lambda function , cube\",lambda_cube(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "even number\n"
+     ]
+    }
+   ],
+   "source": [
+    "calc =lambda num:\"even number\" if num%2==0 else \"odd number\"\n",
+    "print(calc(2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "64\n",
+      "from user def: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "val1=lambda n:n*n       #2*2 exprection\n",
+    "val2=lambda n:n*n*n     #2*2*2\n",
+    "ans=val1(2)             #passing the value #2 storing in ans\n",
+    "print(ans)              #printing the ans  \n",
+    "print(val2(ans))        #printing the val2 ans\n",
+    "\n",
+    "def call_func():        #user define function\n",
+    "    ans = val1(2)+1     \n",
+    "    print(\"from user def:\",ans) #printing the ans\n",
+    "    \n",
+    "call_func()             #function call"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#program to find the odd and even\n",
+    "\n",
+    "ans=lambda num:True if num%2==0 else False\n",
+    "ans(2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
