--- a/program/assignment5.ipynb
+++ b/program/assignment5.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a program to check the number record from the user is positive or negativ"
+    "Write a program to check the number record from the user is positive or negative"
    ]
   },
   {
