--- a/program/Assprogram2.ipynb
+++ b/program/Assprogram2.ipynb
@@ -10,10 +10,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum():\n",
+    "    n1=int(input(\"enter the first no\"))\n",
+    "    n2=int(input(\"enter the second no\"))\n",
+    "    sum=n1+n2\n",
+    "    return sum\n",
+    "\n",
+    "res=sum()\n",
+    "print(res)\n",
+    "    "
+   ]
   },
   {
    "attachments": {},
@@ -25,10 +43,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "def square():\n",
+    "    num=int(input(\"enter a number\"))\n",
+    "    square=math.sqrt(num)\n",
+    "    return square\n",
+    "\n",
+    "ans=square()\n",
+    "print(ans)"
+   ]
   },
   {
    "attachments": {},
@@ -644,22 +679,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 4, 6]\n",
-      "[8, 10, 12]\n",
+      "[5, 7, 9]\n",
+      "[7, 7, 7]\n",
       "[14, 16, 18]\n"
      ]
     }
    ],
    "source": [
     "m1=[[1,2,3],[4,5,6],[7,8,9]]\n",
-    "m2=[[1,2,3],[4,5,6],[7,8,9]]\n",
+    "m2=[[4,5,6],[3,2,1],[7,8,9]]\n",
     "ans=[[m1[i][j]+m2[i][j]  for j in range(len(m1[0]))]\n",
     "    for i in range(len(m1))]\n",
     "\n",
@@ -678,20 +713,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2, 4, 6]\n",
-      "[3, 5, 7]\n"
+      "[2, 5, 9]\n",
+      "[8, 5, 7]\n"
      ]
     }
    ],
    "source": [
-    "mat=[[2,3],[4,5],[6,7]]\n",
+    "mat=[[2,8],[5,5],[9,7]]\n",
     "res=[[0,0,0],[0,0,0]]\n",
     "for i in range(len(mat)):\n",
     "    for j in range(len(mat[0])):\n",
