--- a/fun.ipynb
+++ b/fun.ipynb
@@ -1429,16 +1429,289 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "generator"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "8\n",
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen1(a):\n",
+    "    for i in a:\n",
+    "        yield i*i*i\n",
+    "\n",
+    "num=[1,2,3]\n",
+    "cube_num=gen1(num)\n",
+    "\n",
+    "for i in cube_num:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "729\n",
+      "512\n",
+      "343\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen1(a):\n",
+    "    for i in a:\n",
+    "        yield i*i*i\n",
+    "\n",
+    "num=[9,8,7]\n",
+    "cube_num=gen1(num)\n",
+    "\n",
+    "for i in cube_num:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simgenfun():\n",
+    "    yield 1\n",
+    "    yield 2\n",
+    "    yield 3\n",
+    "\n",
+    "for value in simgenfun():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "genetate 10 odd numbres and sum them all and print the total sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen():\n",
+    "    for i in range(1,20):\n",
+    "        if i % 2 != 0:\n",
+    "            yield i\n",
+    "    \n",
+    "def sum():\n",
+    "    S=0\n",
+    "    for value in gen():\n",
+    "        S=S+value\n",
+    "    print(S)\n",
+    "sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "genetate 10 even numbres and sum them all and print the total sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen():\n",
+    "    for i in range(1,20):\n",
+    "        if i % 2 == 0:\n",
+    "            yield i\n",
+    "    \n",
+    "def sum():\n",
+    "    S=0\n",
+    "    for value in gen():\n",
+    "        S=S+value\n",
+    "    print(S)\n",
+    "sum()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "generate the numbers which are divisible by 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "14\n",
+      "21\n",
+      "28\n",
+      "35\n",
+      "42\n",
+      "49\n",
+      "56\n",
+      "63\n",
+      "70\n",
+      "77\n",
+      "84\n",
+      "91\n",
+      "98\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen():\n",
+    "    for i in range(1,105):\n",
+    "        if i % 7 == 0:\n",
+    "            yield i\n",
+    "    \n",
+    "for value in gen():\n",
+    "    print(value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1], [3], [5], [7], [9], [11]]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list6 = [[i+1] for i in range(12) if i % 2 ==0]\n",
+    "list6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 3, 5, 7, 9, 11],\n",
+       " [1, 3, 5, 7, 9, 11],\n",
+       " [1, 3, 5, 7, 9, 11],\n",
+       " [1, 3, 5, 7, 9, 11],\n",
+       " [1, 3, 5, 7, 9, 11],\n",
+       " [1, 3, 5, 7, 9, 11]]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list6 = [[j for j in range(12) if j % 2 !=0] for i in range(6)]\n",
+    "list6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Orange', 'Banana', 'mango']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = [\"Orange\",\"Banana\",\"mango\",\"grps\"]\n",
+    "fruit_list =[i for i in fruits if i.find('a')!= -1]\n",
+    "print(fruit_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = 'Orange'\n",
+    "print(fruits.find('h'))"
+   ]
   }
  ],
  "metadata": {
